bug solution for button being behind elements

--- a/src/app/components/list-modal/list-modal.component.css
+++ b/src/app/components/list-modal/list-modal.component.css
@@ -44,5 +44,8 @@
   bottom: 20px;
   right: 20px;
 }
+.scroll-to-top-btn {
+  z-index: 1000; 
+}
 
   
